@@ -27,6 +27,10 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+24-Dev-2009 Andrew Eddie
+ ^ Moved modal user field from com_users to jform library; fixed occurances in com_contacts.
+ # Fixed bug in modal users list.
+
 23-Dev-2009 Ian MacLennan
  ^ Moved JUtility::sendMail and sendAdminMail to JMail and added appropriate proxy methods (thanks Arlen Walker)
 
